--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/boguz/burgton-site#readme",
   "dependencies": {
-    "burgton-button": "0.0.5"
+    "burgton-button": "0.0.5",
+    "prismjs": "^1.20.0"
   },
   "devDependencies": {
     "es-dev-server": "^1.46.0"
