--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A site with information about the burgton-button element and library",
   "main": "index.html",
   "scripts": {
-    "start": "es-dev-server --app-index index.html --node-resolve --watch --open"
+    "start": "es-dev-server --app-index build/index.html --node-resolve --watch --open",
+    "clear:build": "if [ -d \"build\" ]; then rm -r build; fi; mkdir build",
+    "copy:html": "cp -f index.html build/",
+    "bundle:css": "postcss css/burgton-site.css -o build/css/burgton-site.css",
+    "build:js": "rollup -c",
+    "build": "npm run clear:build && npm run copy:html && npm run bundle:css && npm run build:js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +26,13 @@
     "prismjs": "^1.20.0"
   },
   "devDependencies": {
-    "es-dev-server": "^1.46.0"
+    "autoprefixer": "^9.7.6",
+    "cssnano": "^4.1.10",
+    "es-dev-server": "^1.46.0",
+    "postcss": "^7.0.27",
+    "postcss-cli": "^7.1.0",
+    "postcss-import": "^12.0.1",
+    "rollup": "^2.6.1",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
